Contact list page

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link <%= (page == 'contact') ? 'active' : ''; %>" aria-current="page" href="/contact"><i class="fa-solid fa-phone"></i> Contact</a>
         </li> 
+        <li class="nav-item">
+          <a class="nav-link <%= (page == 'contact-list') ? 'active' : ''; %>" aria-current="page" href="/contact-list"><i class="fa-solid fa-list"></i> Business Contacts List</a>
+        </li> 
       </ul>
     </div>
   </div>
