--- a/app/views/content/contacts/update.ejs
+++ b/app/views/content/contacts/update.ejs
@@ -24,27 +24,30 @@
                     value="<%= contact.name %>"
                     required>
                 </div>
-
+                <p></p>
                 <div class="form-group">
                     <label for="authorTextField">Contact Number</label>
-                    <input type="text" class="form-control"
+                    <input type="tel" class="form-control"
                     id="numberTextField"
-                    placeholder="Enter the Contact Number"
+                    placeholder="123-456-7890"
+                    pattern = "[0-9]{3}-[0-9]{3}-[0-9]{4}"
                     name="number" 
                     value="<%= contact.number %>"
                     required>
+                    <small>Format: 123-456-7890</small>
                 </div>
-
+                <p></p>
                 <div class="form-group">
                     <label for="publishedTextField">Contact Email</label>
-                    <input type="text" class="form-control"
+                    <input type="email" class="form-control"
                     id="emailTextField"
                     placeholder="Enter the Contact Email"
                     name="emailAddress" 
                     value="<%= contact.emailAddress %>"
                     required>
+                    <small>Format: name@email.com</small>
                 </div>
-
+                <p></p>
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
