--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -36,9 +36,23 @@
         <li class="nav-item">
           <a class="nav-link <%= (page == 'contact') ? 'active' : ''; %>" aria-current="page" href="/contact"><i class="fa-solid fa-phone"></i> Contact</a>
         </li> 
+
+        <% if(displayName){ %>
+
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'contact-list') ? 'active' : ''; %>" aria-current="page" href="/contact-list"><i class="fa-solid fa-list"></i> Business Contacts List</a>
+          <a class="nav-link <%= (page == 'contact-list') ? 'active' : ''; %>" aria-current="page" href="/contact-list"><i class="fa-solid fa-list"></i> Business Contact List</a>
         </li> 
+
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/logout"><i class="fa-solid fa-right-from-bracket fa-lg"></i> Logout</a>
+        </li>
+
+        <% } else{ %>
+          <li class="nav-item">
+            <a class="nav-link <%= (page == 'login') ? 'active' : ''; %>" aria-current="page" href="/login"><i class="fa-solid fa-right-to-bracket fa-lg"></i> Login</a>
+          </li>
+        <% } %>
+          
       </ul>
     </div>
   </div>
