Fixed nav bar not lighting up when pressed

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -40,7 +40,7 @@
         <% if(displayName){ %>
 
         <li class="nav-item">
-          <a class="nav-link <%= (page == 'contact-list') ? 'active' : ''; %>" aria-current="page" href="/contact-list"><i class="fa-solid fa-list"></i> Business Contact List</a>
+          <a class="nav-link <%= (page == 'contacts/list') ? 'active' : ''; %>" aria-current="page" href="/contact-list"><i class="fa-solid fa-list"></i> Business Contact List</a>
         </li> 
 
         <li class="nav-item">
