--- a/app/views/content/contacts/add.ejs
+++ b/app/views/content/contacts/add.ejs
@@ -6,7 +6,7 @@
     Author: Junesik (Tony) Han
     Student #: 301252900
 
-    Filename: update.ejs
+    Filename: add.ejs
 -->
 <div class="container">
     <div class="row">
@@ -53,9 +53,6 @@
 
                     <a href="/contact-list" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
-
-                    <a href="/contact-delete/<%= contact._id %>" class="btn btn-danger">
-                        <i class="fas fa-trash-alt"></i> Delete</a>
             </form>
         </div>
     </div>
