--- a/app/views/content/contacts/list.ejs
+++ b/app/views/content/contacts/list.ejs
@@ -12,25 +12,26 @@
     <h1>Business Contact List</h1>
     <a href="/contact-add" class="btn btn-primary" role="button">
         <i class="fas fa-plus-circle"></i> Add a Contact</a>
+    <!-- <button onclick="sortNameAscending()" class="btn btn-primary" role="button"><i class="fas fa-plus-circle"></i> Sort Contact</button> -->
     <div class="row">
         <div class="col">
     
             <table class="table table-striped table-bordered table-hover">
                 <thead class="table-dark">
                     <tr>
-                        <th scope="col" class="text-center">#</th>
+                        <!-- <th scope="col" class="text-center">#</th> -->
                         <th scope="col">Contact Name</th>
                         <th scope="col">Contact Number</th>
                         <th scope="col">Email Address</th>
-                        <th></th>
-                        <th></th>
+                        <th scope="col" class="text-center">Update</th>
+                        <th scope="col" class="text-center">Delete</th>
                     </tr>
                 </thead>
                 <tbody id="contactList">
                     <!-- Repeatable Rows -->
                     <% for(let count = 0; count < contacts.length; count++) { %>
                         <tr>
-                            <th scope="row" class="text-center"><%= count + 1 %></th>
+                            <!-- <th scope="row" class="text-center"><%= count + 1 %></th> -->
                             <td><%= contacts[count].name %></td>
                             <td><%= contacts[count].number %></td>
                             <td><%= contacts[count].emailAddress %></td>
@@ -53,3 +54,14 @@
         </div>
     </div>
 </div>
+<script>
+    const tbody = document.getElementById("contactList");
+    function tableSort(colNum, cmp) {
+        let rows = [...tbody.rows];
+        rows.sort((a, b) => cmp(a.cells[colNum].textContent, b.cells[colNum].textContent)).map(row => tbody.appendChild(row));
+    };
+    function sortName() {
+        tableSort(0, (a, b) => a.localeCompare(b)); 
+    };
+    window.onload = sortName;
+</script>
